# cuiloa

./: .dockerignore  .eslintrc.json  .gitignore  Cargo.toml  Containerfile  README.md  docker-compose.yml  justfile  next.config.js  package-lock.json  package.json  pgtyped.config.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  turbo.json
.github/workflows/: container.yml  deploy.yml
apps/indexer/: Cargo.toml  package.json
apps/indexer/src/: main.rs
apps/web/: .eslintrc.json  .gitignore  Containerfile  README.md  next.config.js  package.json  pgtyped.config.json  tailwind.config.ts  tsconfig.json
deploy/: pd-init-cuiloa
prisma/: schema.prisma
prisma/migrations/0_init/: migration.sql
src/app/: fonts.tsx  globals.css  layout.tsx  page.tsx
src/app/blocks/: page.tsx
src/app/dex/: page.tsx
src/app/governance/: page.tsx
src/app/ibc/: page.tsx
src/app/staking/: page.tsx
src/app/transactions/: page.tsx
src/components/ABCIEventsTable/: columns.tsx  index.tsx
src/components/ActionView/: index.tsx
src/components/Block/: getBlock.ts  index.tsx
src/components/BlockEvent/: index.tsx
src/components/BlocksTable/: columns.tsx  getBlocks.ts  index.tsx
src/components/EventTable/: columns.tsx  dataTable.tsx  index.tsx
src/components/Navbar/: index.tsx
src/components/PreviewTable/: index.tsx
src/components/Providers/: index.tsx
src/components/SearchResultsTable/: columns.tsx  index.tsx
src/components/Searchbar/: index.tsx
src/components/ThemeToggleButton/: index.tsx
src/lib/: db.ts  patch-toJSON-BigInt.ts  protobuf.ts  utils.ts
(+154 files in other folders)
