[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "3.2", features = ["derive", "env"] }
cometindex = { git = "https://github.com/penumbra-zone/penumbra.git" }
penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git" }
serde_json = "1.0.125"
sqlx = { version = "0.7", features = ["runtime-tokio", "bigdecimal", "chrono", "postgres", "json"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
